Fixed alignment on the input labels. Added a footer with link to personal website.

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@ label {
 	padding: .5rem;
 }
 
+label:nth-of-type(odd) {
+	padding-left: 0;
+}
+
 input {
 	margin: .5rem 0 .5rem .5rem;
 }
